
1.0.0 () -

0.1.0 () -

- Added 'continue' command.
- Added 'diagnostics' command.
- Added 'export' command.
- Added 'extensions' command.
- Added 'help' command.
- Added 'log' command.
- Added 'start' command.
- Added 'stop' command.
- Added 'tags' command.
- Integrated libshared.git.

Design completed 2016-03-13
Project started  2015-11-29

------ current release ---------------------------
------ start -----------------------------------