@@ -10,6 +10,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Tomas Babej
   Dirk Deimeke
   Wim Schuermann
+  Jelle van der Waa
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
@@ -18,3 +19,4 @@ suggestions:
   creatid
   Frédéric Meynadier
   Bruno Vernay
+  Ben Boeckel
