@@ -3,6 +3,10 @@
 
 0.1.0 () -
 
+- TD-49   Log when file management fails
+          (thanks to Ben Boeckel).
+- TD-115  Throw error when config file is missing or not readable
+          (thanks to Jelle van der Waa).
 - Added 'continue' command.
 - Added 'diagnostics' command.
 - Added 'export' command.
